AO3-4629 Fix menu positioning in certain window widths and download menu color in Dark Mode  (#5451)
* AO3-4629 Fix stray space causing alignment issues with chapter and download menus

TODO: Check the mobile version

* AO3-4629 Update selector for download menu in Dark Mode

* AO3-4629 Update code comment

--- a/public/stylesheets/masters/dark_mode/dark_mode_site_screen_.css
+++ b/public/stylesheets/masters/dark_mode/dark_mode_site_screen_.css
@@ -407,7 +407,8 @@ span.delete {
 
 /* context: work navigation actions with secondary navigation */
 
-.download, .javascript .download .secondary {
+.work.navigation .download,
+.javascript .work.navigation .download .secondary {
   background: #2a2a2a;
   border-color: #555;
     box-shadow: 1px 1px 3px #000;
